--- a/assets/css/productHome.css
+++ b/assets/css/productHome.css
@@ -42,7 +42,7 @@
   top:0; right: 0; left: 0; bottom: 0;
   margin: auto;
   
-  background: url("/assets/images/cornFlakes2.avif");
+  background: url("/./assets/images/cornFlakes2.avif");
   background-color: black;
   background-size: cover;
   cursor: pointer;
