--- a/assets/css/recipesHome.css
+++ b/assets/css/recipesHome.css
@@ -21,7 +21,7 @@
   /* top:0; right: 0; left: 0; bottom: 0; */
   margin: auto;
   
-  background: url("../assets/images/berryRecipes.jpg");
+  background: url("/../assets/images/berryRecipes.jpg");
   background-color: black;
   background-size: cover;
   cursor: pointer;
@@ -39,7 +39,7 @@
     top:0; right: 0; left: 0; bottom: 0;
     margin: auto;
     
-    background: url("../assets/images/chocos-chocolate-glacier-home.jpg");
+    background: url("/../assets/images/chocos-chocolate-glacier-home.jpg");
     background-color: black;
     background-size: cover;
     cursor: pointer;
@@ -57,7 +57,7 @@
      top:0; right: 0; left: 0; bottom: 0;
      margin: auto;
         
-     background: url("../assets/images/corn-flakes-chocos-jugal-home\ -\ Copy.jpg");
+     background: url("/../assets/images/corn-flakes-chocos-jugal-home\ -\ Copy.jpg");
      background-color: black;
      background-size: cover;
      cursor: pointer;
